# nix-shell-locked

./: Cargo.toml  README.md  default.nix  flake.nix
src/: cli.rs  defaults.rs  main.rs
