[package]
name = "nix-shell-locked"
description = "Wrapper of `nix shell` that reads a lockfiles to get the nixpkgs revision to use when sourcing packages to install in transient shell"
version = "0.2.0"
authors = ["Stephen Sherratt <stephen@sherra.tt>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/gridbugs/nix-shell-locked"

[dependencies]
anyhow = "1.0"
env_logger = "0.10"
exec = "0.3"
log = "0.4"
meap = "0.8"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
shellexpand = "3.1"
toml = "0.7"
xdg = "2.5"
